finished writing article

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 
 
 <section class="relative my-10 first-of-type:mt-0 last-of-type:mb-0">
-  <h2 class="!my-0 pb-1 !leading-none">HDR Images in the Browser Using JPEG XL in 2022</h2>
-  <time class="text-sm opacity-60">Aug 23, 2022</time>
+  <h2 class="!my-0 pb-1 !leading-none">HDR Images in the Browser Using JPEG XL in Q3 2022</h2>
+  <time class="text-sm opacity-60">Aug 24, 2022</time>
   <a class="absolute inset-0" href="https://sturmen.github.io/posts/hdr-jpeg-xl-2022/"></a>
 </section>
 
